change student fetch by name

--- a/views/read.ejs
+++ b/views/read.ejs
@@ -224,6 +224,9 @@
                 <ul class="list-unstyled components ">
                     <!-- <p>Dummy Heading</p> -->
                     <li>
+                        <a href="/read">dashboard</a>
+                    </li>
+                    <li>
                         <a href="/read">Student Data</a>
                     </li>
                     <li>
